[project]
name = "quant-ict-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "google-auth>=2.49.2",
    "gspread>=6.2.1",
    "jupyterlab>=4.5.6",
    "kaleido>=1.2.0",
    "metatrader5>=5.0.5735",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "vectorbt>=0.28.2",
    "yfinance>=1.3.0",
]
